fix error, add Output target dir to build

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,11 @@
   "integrations": {
     "capacitor": {}
   },
+  "outputTarget": {
+    "type": "www",
+    "dir": "build"
+  },
   "type": "react-vite"
+  
 }
+
