--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
-    "@ionic/react": "^7.0.0",
+    "@ionic/react": "^7.5.3",
     "@ionic/react-router": "^7.0.0",
+    "@react-three/drei": "^9.88.11",
+    "@react-three/fiber": "^8.15.9",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
@@ -27,6 +29,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "three": "^0.158.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/three": "^0.158.1",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.16",
