--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.4.0",
+    "daisyui": "^4.0.3",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
