--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@ionic/react-router": "^7.0.0",
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
+    "@react-three/postprocessing": "^2.15.11",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
     "json-stringify-safe": "^5.0.1",
+    "postprocessing": "^6.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
