implementing translation feature

--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
     "@react-three/postprocessing": "^2.15.11",
+    "@tweenjs/tween.js": "^21.0.0",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "i18next": "^23.7.6",
     "ionicons": "^7.0.0",
     "json-stringify-safe": "^5.0.1",
     "postprocessing": "^6.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "three": "^0.158.0",
