--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "i18next": "^23.7.6",
     "ionicons": "^7.0.0",
     "json-stringify-safe": "^5.0.1",
+    "maath": "^0.10.4",
     "postprocessing": "^6.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-simple-keyboard": "^3.7.41",
+    "suspend-react": "^0.1.3",
     "three": "^0.158.0",
+    "wouter": "^2.12.1",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
@@ -46,7 +50,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/three": "^0.158.1",
+    "@types/three": "^0.158.3",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.16",
