--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.41",
     "suspend-react": "^0.1.3",
+    "swiper": "^11.0.5",
     "three": "^0.158.0",
     "wouter": "^2.12.1",
     "zustand": "^4.4.6"
@@ -59,6 +60,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
