--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
+    "react-open-weather": "^1.3.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.41",
