Initial Commit: Index Renaming and File Optimization

--- a/.hintrc
+++ b/.hintrc
@@ -50,6 +50,12 @@
         "nested-interactive": "off"
       }
     ],
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "axe/aria": [
+      "default",
+      {
+        "aria-required-children": "off"
+      }
+    ]
   }
 }
