--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.41",
+    "react-toastify": "^9.1.3",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
+    "theme-change": "^2.5.0",
     "three": "^0.158.0",
     "wouter": "^2.12.1",
     "zustand": "^4.4.6"
