--- a/package.json
+++ b/package.json
@@ -19,22 +19,20 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.5.3",
     "@ionic/react-router": "^7.0.0",
-
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
     "@react-three/postprocessing": "^2.15.11",
     "@tweenjs/tween.js": "^21.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
- 
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
     "i18next": "^23.7.6",
     "ionicons": "^7.0.0",
     "json-stringify-safe": "^5.0.1",
-
     "maath": "^0.10.4",
     "postprocessing": "^6.33.3",
+    "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
@@ -45,7 +43,6 @@
     "react-toastify": "^9.1.3",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
-
     "theme-change": "^2.5.0",
     "three": "^0.158.0",
     "wouter": "^2.12.1",
