added list hint

--- a/.hintrc
+++ b/.hintrc
@@ -30,7 +30,8 @@
     "axe/structure": [
       "default",
       {
-        "list": "off"
+        "list": "off",
+        "listitem": "off"
       }
     ],
     "manifest-file-extension": "off",
