--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
+    "react-modal": "^3.16.1",
     "react-open-weather": "^1.3.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
@@ -57,6 +58,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-modal": "^3.16.3",
     "@types/three": "^0.158.3",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
