--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tweenjs/tween.js": "^21.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtual-keyboard": "^1.0.7",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
     "i18next": "^23.7.6",
@@ -40,8 +41,9 @@
     "react-open-weather": "^1.3.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "react-simple-keyboard": "^3.7.41",
+    "react-simple-keyboard": "^3.7.86",
     "react-toastify": "^9.1.3",
+    "simple-keyboard": "^3.7.59",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
     "theme-change": "^2.5.0",
