--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fps": "^1.0.6",
     "react-i18next": "^13.5.0",
     "react-modal": "^3.16.1",
     "react-open-weather": "^1.3.2",
