--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@react-three/fiber": "^8.15.9",
     "@react-three/postprocessing": "^2.15.11",
     "@tweenjs/tween.js": "^21.0.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtual-keyboard": "^1.0.7",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
     "i18next": "^23.7.6",
@@ -30,18 +33,24 @@
     "json-stringify-safe": "^5.0.1",
     "maath": "^0.10.4",
     "postprocessing": "^6.33.3",
+    "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fps": "^1.0.6",
     "react-i18next": "^13.5.0",
     "react-modal": "^3.16.1",
     "react-open-weather": "^1.3.2",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.86",
     "react-toastify": "^9.1.3",
     "simple-keyboard": "^3.7.59",
     "suspend-react": "^0.1.3",
+    "swiper": "^11.0.5",
     "theme-change": "^2.5.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "wouter": "^2.12.1",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.1",
