--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@ionic/react": "^7.5.3",
     "@ionic/react-router": "^7.0.0",
     "@react-three/drei": "^9.88.11",
-    "@react-three/fiber": "^8.15.9",
+    "@react-three/fiber": "^8.15.19",
     "@react-three/postprocessing": "^2.15.11",
     "@tweenjs/tween.js": "^21.0.0",
     "@types/react-router": "^5.1.20",
@@ -43,7 +43,9 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.86",
+    "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
+    "react-use-gesture": "^9.1.3",
     "simple-keyboard": "^3.7.59",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
