--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "json-stringify-safe": "^5.0.1",
     "maath": "^0.10.4",
     "postprocessing": "^6.33.3",
-    "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fps": "^1.0.6",
@@ -43,14 +42,12 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.86",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^10.0.5",
     "simple-keyboard": "^3.7.59",
     "suspend-react": "^0.1.3",
-    "swiper": "^11.0.5",
     "theme-change": "^2.5.0",
     "three": "^0.158.0",
-    "wouter": "^2.12.1",
-    "zustand": "^4.4.6"
+    "wouter": "^2.12.1"
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.1",
