--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ionicons": "^7.0.0",
     "json-stringify-safe": "^5.0.1",
     "maath": "^0.10.4",
+    "material-react-table": "^2.12.1",
     "postprocessing": "^6.33.3",
     "preline": "^2.0.3",
     "react": "^18.2.0",
@@ -43,9 +44,7 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-simple-keyboard": "^3.7.86",
-    "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
-    "react-use-gesture": "^9.1.3",
     "simple-keyboard": "^3.7.59",
     "suspend-react": "^0.1.3",
     "swiper": "^11.0.5",
