--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tweenjs/tween.js": "^21.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-toastify": "^4.1.0",
     "@types/react-virtual-keyboard": "^1.0.7",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
