--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "@types/react-virtual-keyboard": "^1.0.7",
+    "@vercel/analytics": "^1.2.2",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
     "i18next": "^23.7.6",
